# postmark-models

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
examples/: real_test.json  website_example.json  website_inbound_detail.json
postmark_models/: __init__.py  message.py
tests/: conftest.py  test_examples.py
