[project]
name = "postmark-models"
version = "0.1.0"
description = "Postmark Pydantic models"
authors = [
    {name = "Valentin Kivachuk Burda",email = "vk18496@gmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
