[project]
name = "postmark-models"
version = "0.1.1"
description = "Postmark Pydantic models"
authors = [{ name = "Valentin Kivachuk Burda", email = "vk18496@gmail.com" }]
license = { text = "GPLv3" }
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9"
pydantic = "^2.11.4"
email-validator = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-examples = "^0.0.18"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
